[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cenas/sokoban/sokoban_spritesheet_pixel.png" type="Texture" id=1]
[ext_resource path="res://Cenas/sokoban/sokoban.gd" type="Script" id=2]
[ext_resource path="res://Imagens/NPC/avatar1_Oficial.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=6]
0/name = "sokoban_spritesheet_pixel.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "sokoban_spritesheet_pixel.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 224, 64, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "sokoban_spritesheet_pixel.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 192, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "sokoban_spritesheet_pixel.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 32, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "sokoban_spritesheet_pixel.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 96, 264, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[node name="sokoban" type="Node2D"]
script = ExtResource( 2 )
auto_start = true

[node name="tilemapBg" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
format = 1

[node name="tilemapTargets" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
format = 1

[node name="tilemap" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
format = 1

[node name="boxes" type="Node2D" parent="."]

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( -263, -203 )
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="player"]
position = Vector2( 16, 18 )
scale = Vector2( 0.65625, 0.65625 )
texture = ExtResource( 3 )
hframes = 9
vframes = 4
frame = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 16, 16 )
shape = SubResource( 4 )

[node name="exit_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="exit_timer" to="." method="_on_exit_timer_timeout"]
